--- a/connectfour.css
+++ b/connectfour.css
@@ -18,7 +18,7 @@ h1 {
   text-overflow: ellipsis;
   text-shadow: 5px 5px 0 rgba(255,0,0,1) ;
 }
-
+/*test*/
 .standardcolumn {
   list-style-type: none;
   height: 770px;
